Add `RealWorldSemanticSearchTest` to demonstrate semantic indexing and similarity-based document retrieval